Updated package vulnerabilities.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/Corvus.Json.CodeGeneration.Abstractions.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/Corvus.Json.CodeGeneration.Abstractions.csproj
@@ -26,7 +26,8 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
-	</ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
+  </ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Corvus.Json.ExtendedTypes\Corvus.Json.ExtendedTypes.csproj" />
