--- a/Solutions/Corvus.Json.Benchmarking/Corvus.Json.Benchmarking.csproj
+++ b/Solutions/Corvus.Json.Benchmarking/Corvus.Json.Benchmarking.csproj
@@ -23,7 +23,8 @@
 		<PackageReference Include="JsonSchema.Net" Version="6.0.7" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
 		<PackageReference Include="JsonPatch.Net" Version="3.0.0" />
-	</ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
+  </ItemGroup>
 
 	<ItemGroup>
 	  <None Update="PersonModel\person-array-schema.json">
