--- a/Solutions/Corvus.Json.JsonSchema.Draft201909/Corvus.Json.JsonSchema.Draft201909.csproj
+++ b/Solutions/Corvus.Json.JsonSchema.Draft201909/Corvus.Json.JsonSchema.Draft201909.csproj
@@ -18,9 +18,10 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="8.0.3" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="8.0.7" />
 		<PackageReference Include="NodaTime" Version="3.1.11" />
-	</ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Corvus.Json.ExtendedTypes\Corvus.Json.ExtendedTypes.csproj" />
