--- a/Solutions/Corvus.JsonSchema.SpecGenerator/Corvus.JsonSchema.SpecGenerator.csproj
+++ b/Solutions/Corvus.JsonSchema.SpecGenerator/Corvus.JsonSchema.SpecGenerator.csproj
@@ -14,7 +14,8 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-	</ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
+  </ItemGroup>
 
 	<ItemGroup>
 	  <None Update="OpenApiTestSuiteSelector.jsonc">
